[package]
name = "cece"
version = "0.1.1"
authors = ["jj1uty <jj1uty@jarl.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto2 = { git = "https://github.com/shadowsocks/crypto2", rev = "f32eccf5ef588206017ee47c29614e727d8b1183" }
rand = "0.8.5"
rand_chacha = "0.3.1"
base64 = "0.13.0"
regex = "1.6"
getopts = "0.2"
once_cell = "1.13.0"

[dev-dependencies]
clippy = "0.0.302"
cargo-edit = "0.10.1"
